# django-postgres-composite-types

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  docker-compose.yml  pylintrc  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test_requirements.in  test_requirements.txt  tox.ini
.github/workflows/: linting.yml  pypi.yml  tox.yml
postgres_composite_types/: __init__.py  caster.py  compat.py  composite_type.py  fields.py  forms.py  operations.py  quoting.py  signals.py
postgres_composite_types/templates/postgres_composite_types/forms/widgets/: composite_type.html
tests/: __init__.py  base.py  compat.py  fields.py  models.py  settings.py  test_field.py  test_forms.py  test_more.py
tests/migrations/: 0001_initial.py  0002_models.py
