[tool.poetry]
name = "django-postgres-composite-types"
version = "0.4.2"
description = "Postgres composite types support for Django"
authors = ["Danielle Madeley <danielle@madeley.id.au>"]
license = "BSD"
readme = "README.md"
packages = [{include = "postgres_composite_types"}]

[tool.poetry.dependencies]
python = "^3.4"
Django = ">=1.11"
psycopg2 = ">=2.7"

[tool.poetry.group.dev.dependencies]
flake8 = ">=3"
pylint = ">2.3"
nose = "^1.3.7"
pylint-django = ">2.4"
isort = ">4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
