[tool.poetry]
name = "django-postgres-composite-types"
version = "0.4.2"
description = "Postgres composite types support for Django"
authors = ["Danielle Madeley <danielle@madeley.id.au>"]
license = "BSD"
readme = "README.md"
packages = [{include = "postgres_composite_types"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=3.2.16"
psycopg2 = ">=2.8.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylint = "^2.13.9"
nose = "^1.3.7"
pylint-django = ">=2.5.3"
isort = "^5.10.1"
pre-commit = "^2.9.2"
django-nose = "^1.4.7"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
