[tool.poetry]
name = "django-postgres-composite-types"
version = "1.0.0-beta.0"
description = "Postgres composite types support for Django"
authors = ["Danielle Madeley <danielle@madeley.id.au>"]
license = "BSD"
readme = "README.md"
packages = [{include = "postgres_composite_types"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=3.2.16"
psycopg2 = ">=2.8.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylint = "^2.13.9"
pylint-django = ">=2.5.3"
isort = "^5.10.1"
pre-commit = "^2.9.2"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.isort]
profile = "black"

[tool.pylint.MASTER]
load-plugins = "pylint_django"

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "import-outside-toplevel",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "unused-argument",
    "R0801",
]

[tool.pylint.BASIC]
function-rgx = "[a-z_][a-z0-9_]{2,50}$|test_[a-zA-Z_][a-zA-Z0-9_]{2,100}$|setUp$|tearDown$"
method-rgx = "[a-z_][a-z0-9_]{2,30}$|test_[a-zA-Z_][a-zA-Z0-9_]{2,100}$"
attr-rgx = "[a-z_][a-z0-9_]{2,30}$|maxDiff$"
exclude-protected = "_asdict,_fields,_replace,_source,_make,_meta"
no-docstring-rgx = "^Meta$|^_"
